FIX: truncate problem on Install App button on Sidebar

--- a/src/components/WebPlayer/Sidebar/InstallApp/style.scss
+++ b/src/components/WebPlayer/Sidebar/InstallApp/style.scss
@@ -1,7 +1,7 @@
 .web-player-container {
   .install-app {
     &-container {
-      @apply flex absolute bottom-0 bg-black-default w-full h-10 left-0 ml-6 gap-4 items-center;
+      @apply flex bottom-0 bg-black-default w-full h-10 left-0 gap-4 items-center;
       @apply hover:cursor-pointer;
     }
 
